tests/duplicate_extern_functions/error.txt
Validation error: ./tests/duplicate_extern_functions/other_file.fae, line 2: Duplicate extern function declaration
  2| fn function_two()
        ^^^^^^^^^^^^
Note: ./tests/duplicate_extern_functions/duplicate_extern_functions.fae, line 4: Other declaration here
  4| fn function_one()
        ^^^^^^^^^^^^
